-Overflow issue when deploying

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -165,7 +165,7 @@
 .projectsNavigatorContainer{
   display: flex;
   // border: 1px solid red;
-  height: 10vh;
+  height: 5vh;
   width: 80vw;
   align-items: center;
   justify-content: space-around;
@@ -266,7 +266,7 @@
 }
 
 .projectsTechTitleItem{
-  //border: 1px solid white;
+  // border: 1px solid white;
   margin: 0;
   font-family: 'Fira Mono', monospace;
 }
